# Architecture-Discovery

./: .gitignore  Architecture.md  README.md
.github/workflows/: rust.yml
agent-bridge/: .env.bridge  Dockerfile  config.sh  delete-config.sh  docker-compose.yml
agent-bridge/config/: Dockerfile  agents-mqtt-connector-config.json  config.sh  listening-mqtt-connector-config.json  mqtt-connector-config.json  networks-mqtt-connector-config.json  nodes-mqtt-connector-config.json  processes-mqtt-connector-config.json
agent-bridge/kafka-connect-mqtt-6.2.0/: kafka-mqtt-6.2.0.jar.old
agent-bridge/kui/: config.yml
discovery_processor/: Cargo.toml
discovery_processor/src/: main.rs
integration-tests/: .env.bridge  Dockerfile  agents-mqtt-connector-config.json  config.sh  docker-compose.yml  networks-mqtt-connector-config.json
integration-tests/couchb/couchdb_config/: docker.ini
integration-tests/couchb/couchdb_data/: _dbs.couch  _nodes.couch
integration-tests/couchb/couchdb_data/shards/00000000-7fffffff/: _replicator.1729047038.couch  _users.1729047038.couch  dummy.1729047480.couch
integration-tests/couchb/couchdb_data/shards/80000000-ffffffff/: _replicator.1729047038.couch  _users.1729047038.couch  dummy.1729047480.couch
integration-tests/mqtt/: mosquitto.conf
integration-tests/tests/: agent.sh  dummy.sh
node_agent/: Cargo.toml  docker-compose.yml
node_agent/src/: lib.rs  linux.rs  main.rs
