[package]
name = "node_agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = "0.12"
serde_json = "1.0.114"
serde = {version = "1.0.197",features = ["derive"]} 
log = "0.4.20"
stderrlog = "0.6.0"
gethostname = "0.4.3"
pnet = "0.35.0"
env_logger = "0.11.2"
sysinfo = "0.30.13"
listeners = "0.2.1"
uuid = {version = "1.10.0", features = ["v4","fast-rng","macro-diagnostics","serde"]}
structopt = { version = "0.3", default-features = false }

